--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^3.3.7",
     "empari-material-kit": "^1.0.3",
     "jquery": "^3.2.1",
+    "nouislider": "^10.1.0",
     "vue": "^2.3.3",
     "vue-router": "^2.7.0",
     "vuex": "^2.3.1",
