--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.3.3",
     "vue-router": "^2.7.0",
     "vuex": "^2.3.1",
+    "vuex-i18n": "^1.6.0",
     "vuex-router-sync": "^4.2.0"
   },
   "devDependencies": {
